# foojidoo

./: README.md
api/: pyproject.toml
api/alembic/: env.py
api/alembic/versions/: a7d897c4b7f6_init_schemas.py  ec772f84ad6d_initial_schema.py
api/src/api/: __init__.py  dependencies.py  main.py  settings.py
api/src/api/db/: database.py  schemes.py
api/src/api/models/: order.py  restaurant.py  user.py
api/src/api/repositories/: order.py  restaurant.py  token.py  user.py
api/src/api/routers/: auth.py  order.py  restaurant.py  user.py
api/src/api/services/: auth.py
api/tests/: conftest.py  test_auth_router.py  test_order_router.py  test_user_router.py
docker/: docker-compose.yaml
ui/: package-lock.json  package.json
ui/src/app/: layout.js  page.jsx
ui/src/app/account/: page.jsx
ui/src/app/cart/: page.jsx
ui/src/app/login/: page.jsx
ui/src/app/restaurant/[restaurantId]/menu/: page.jsx
ui/src/app/signup/: page.jsx
ui/src/components/: Navbar.jsx  NotificationProvider.jsx
ui/src/lib/: api.js
